# localdictate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
localdictate/: __main__.py  engine.py  settings.py  single_instance.py  ui.py
osw/: __main__.py  engine.py  ui.py
tests/: test_engine.py  test_settings.py  test_single_instance.py
